[package]
name = "gluesql-discord-storage"
version = "0.1.0"
edition = "2021"

[dependencies]
gluesql-core = "0.13"
async-trait = "0.1"
serenity = { version = "0.11", default-features = false, features = [
	"builder",
	"cache",
	"chrono",
	"client",
	"gateway",
	"model",
	"http",
	"utils",
	"rustls_backend",
] }
eyre = "0.6"
dotenv = "0.15"
serde = "1"
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
color-eyre = "0.6"

[dev-dependencies]
test-suite = { package = "gluesql-test-suite", version = "0.13" }
