[package]
name = "common"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
gluesql-core = { version = "0.13", git = "https://github.com/gluesql/gluesql.git", rev = "f511bedfb002bc7e3646359ff1e4430f824cf440" }
async-trait = "0.1"
serenity = { version = "0.11", default-features = false, features = [
	"builder",
	"cache",
	"chrono",
	"client",
	"gateway",
	"model",
	"http",
	"utils",
	"rustls_backend",
] }
eyre = "0.6"
dotenv = "0.15"
serde = "1"
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
color-eyre = "0.6"
tracing = "0.1"
tracing-subscriber = "0.3"
